Complete pipeline and save data file

--- a/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
+++ b/Machine_Learning_Deep_Learning/enhancer_prediction_dataset_protocol.ipynb
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -814,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -949,7 +949,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -1021,7 +1021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -1095,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1137,7 +1137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -1284,7 +1284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -1326,7 +1326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -1406,7 +1406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -1478,7 +1478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -1518,7 +1518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1539,7 +1539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -1618,10 +1618,298 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 4</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>chrom</th><th scope=col>start</th><th scope=col>end</th><th scope=col>class</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>chr1</td><td>    1</td><td> 2000</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>55616</th><td>chr1</td><td> 2001</td><td> 4000</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>91302</th><td>chr1</td><td> 4001</td><td> 6000</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>102413</th><td>chr1</td><td> 6001</td><td> 8000</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>113524</th><td>chr1</td><td> 8001</td><td>10000</td><td>            </td></tr>\n",
+       "\t<tr><th scope=row>10</th><td>chr1</td><td>10001</td><td>12000</td><td>Non-Enhancer</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 4\n",
+       "\\begin{tabular}{r|llll}\n",
+       "  & chrom & start & end & class\\\\\n",
+       "  & <fct> & <dbl> & <int> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & chr1 &     1 &  2000 & Non-Enhancer\\\\\n",
+       "\t55616 & chr1 &  2001 &  4000 & Non-Enhancer\\\\\n",
+       "\t91302 & chr1 &  4001 &  6000 & Non-Enhancer\\\\\n",
+       "\t102413 & chr1 &  6001 &  8000 & Non-Enhancer\\\\\n",
+       "\t113524 & chr1 &  8001 & 10000 &             \\\\\n",
+       "\t10 & chr1 & 10001 & 12000 & Non-Enhancer\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 4\n",
+       "\n",
+       "| <!--/--> | chrom &lt;fct&gt; | start &lt;dbl&gt; | end &lt;int&gt; | class &lt;chr&gt; |\n",
+       "|---|---|---|---|---|\n",
+       "| 1 | chr1 |     1 |  2000 | Non-Enhancer |\n",
+       "| 55616 | chr1 |  2001 |  4000 | Non-Enhancer |\n",
+       "| 91302 | chr1 |  4001 |  6000 | Non-Enhancer |\n",
+       "| 102413 | chr1 |  6001 |  8000 | Non-Enhancer |\n",
+       "| 113524 | chr1 |  8001 | 10000 | <!----> |\n",
+       "| 10 | chr1 | 10001 | 12000 | Non-Enhancer |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       chrom start end   class       \n",
+       "1      chr1      1  2000 Non-Enhancer\n",
+       "55616  chr1   2001  4000 Non-Enhancer\n",
+       "91302  chr1   4001  6000 Non-Enhancer\n",
+       "102413 chr1   6001  8000 Non-Enhancer\n",
+       "113524 chr1   8001 10000             \n",
+       "10     chr1  10001 12000 Non-Enhancer"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "## Merging classes to a common column.\n",
+    "library(stringr)\n",
+    "negativesPositives$class <- str_remove_all(with(negativesPositives, paste0(NegativeClass, NegativeClassFromRandom, PositiveClass)), \"NA\")\n",
+    "\n",
+    "## Removing redundant columns\n",
+    "negativesPositives[,4:6] <- c()\n",
+    "head(negativesPositives)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note that we have some regions falling outside 'Enhancer' and 'Non-Enhancer' categories. For efficiency, we'll prune those in the final dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 7</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>chrom</th><th scope=col>start</th><th scope=col>end</th><th scope=col>H3K27ac</th><th scope=col>H3K4me1</th><th scope=col>H3K4me2</th><th scope=col>H3K4me3</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>chr1</td><td>    1</td><td> 2000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><th scope=row>2</th><td>chr1</td><td> 2001</td><td> 4000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><th scope=row>3</th><td>chr1</td><td> 4001</td><td> 6000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><th scope=row>4</th><td>chr1</td><td> 6001</td><td> 8000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><th scope=row>5</th><td>chr1</td><td> 8001</td><td>10000</td><td>0</td><td>0.11165</td><td>0</td><td>0</td></tr>\n",
+       "\t<tr><th scope=row>6</th><td>chr1</td><td>10001</td><td>12000</td><td>0</td><td>0.11165</td><td>0</td><td>0</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 7\n",
+       "\\begin{tabular}{r|lllllll}\n",
+       "  & chrom & start & end & H3K27ac & H3K4me1 & H3K4me2 & H3K4me3\\\\\n",
+       "  & <fct> & <dbl> & <int> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
+       "\\hline\n",
+       "\t1 & chr1 &     1 &  2000 & 0 & 0.00000 & 0 & 0\\\\\n",
+       "\t2 & chr1 &  2001 &  4000 & 0 & 0.00000 & 0 & 0\\\\\n",
+       "\t3 & chr1 &  4001 &  6000 & 0 & 0.00000 & 0 & 0\\\\\n",
+       "\t4 & chr1 &  6001 &  8000 & 0 & 0.00000 & 0 & 0\\\\\n",
+       "\t5 & chr1 &  8001 & 10000 & 0 & 0.11165 & 0 & 0\\\\\n",
+       "\t6 & chr1 & 10001 & 12000 & 0 & 0.11165 & 0 & 0\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 7\n",
+       "\n",
+       "| <!--/--> | chrom &lt;fct&gt; | start &lt;dbl&gt; | end &lt;int&gt; | H3K27ac &lt;dbl&gt; | H3K4me1 &lt;dbl&gt; | H3K4me2 &lt;dbl&gt; | H3K4me3 &lt;dbl&gt; |\n",
+       "|---|---|---|---|---|---|---|---|\n",
+       "| 1 | chr1 |     1 |  2000 | 0 | 0.00000 | 0 | 0 |\n",
+       "| 2 | chr1 |  2001 |  4000 | 0 | 0.00000 | 0 | 0 |\n",
+       "| 3 | chr1 |  4001 |  6000 | 0 | 0.00000 | 0 | 0 |\n",
+       "| 4 | chr1 |  6001 |  8000 | 0 | 0.00000 | 0 | 0 |\n",
+       "| 5 | chr1 |  8001 | 10000 | 0 | 0.11165 | 0 | 0 |\n",
+       "| 6 | chr1 | 10001 | 12000 | 0 | 0.11165 | 0 | 0 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  chrom start end   H3K27ac H3K4me1 H3K4me2 H3K4me3\n",
+       "1 chr1      1  2000 0       0.00000 0       0      \n",
+       "2 chr1   2001  4000 0       0.00000 0       0      \n",
+       "3 chr1   4001  6000 0       0.00000 0       0      \n",
+       "4 chr1   6001  8000 0       0.00000 0       0      \n",
+       "5 chr1   8001 10000 0       0.11165 0       0      \n",
+       "6 chr1  10001 12000 0       0.11165 0       0      "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "## Correpondingly, we recall the 'countMatrix' with coverages for features.\n",
+    "head(countMatrix)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table>\n",
+       "<caption>A data.frame: 6 × 8</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>chrom</th><th scope=col>start</th><th scope=col>end</th><th scope=col>H3K27ac</th><th scope=col>H3K4me1</th><th scope=col>H3K4me2</th><th scope=col>H3K4me3</th><th scope=col>class</th></tr>\n",
+       "\t<tr><th></th><th scope=col>&lt;fct&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;int&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;chr&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1</th><td>chr1</td><td>    1</td><td> 2000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>12459</th><td>chr1</td><td> 2001</td><td> 4000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>23570</th><td>chr1</td><td> 4001</td><td> 6000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>34681</th><td>chr1</td><td> 6001</td><td> 8000</td><td>0</td><td>0.00000</td><td>0</td><td>0</td><td>Non-Enhancer</td></tr>\n",
+       "\t<tr><th scope=row>45792</th><td>chr1</td><td> 8001</td><td>10000</td><td>0</td><td>0.11165</td><td>0</td><td>0</td><td>            </td></tr>\n",
+       "\t<tr><th scope=row>10</th><td>chr1</td><td>10001</td><td>12000</td><td>0</td><td>0.11165</td><td>0</td><td>0</td><td>Non-Enhancer</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A data.frame: 6 × 8\n",
+       "\\begin{tabular}{r|llllllll}\n",
+       "  & chrom & start & end & H3K27ac & H3K4me1 & H3K4me2 & H3K4me3 & class\\\\\n",
+       "  & <fct> & <dbl> & <int> & <dbl> & <dbl> & <dbl> & <dbl> & <chr>\\\\\n",
+       "\\hline\n",
+       "\t1 & chr1 &     1 &  2000 & 0 & 0.00000 & 0 & 0 & Non-Enhancer\\\\\n",
+       "\t12459 & chr1 &  2001 &  4000 & 0 & 0.00000 & 0 & 0 & Non-Enhancer\\\\\n",
+       "\t23570 & chr1 &  4001 &  6000 & 0 & 0.00000 & 0 & 0 & Non-Enhancer\\\\\n",
+       "\t34681 & chr1 &  6001 &  8000 & 0 & 0.00000 & 0 & 0 & Non-Enhancer\\\\\n",
+       "\t45792 & chr1 &  8001 & 10000 & 0 & 0.11165 & 0 & 0 &             \\\\\n",
+       "\t10 & chr1 & 10001 & 12000 & 0 & 0.11165 & 0 & 0 & Non-Enhancer\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A data.frame: 6 × 8\n",
+       "\n",
+       "| <!--/--> | chrom &lt;fct&gt; | start &lt;dbl&gt; | end &lt;int&gt; | H3K27ac &lt;dbl&gt; | H3K4me1 &lt;dbl&gt; | H3K4me2 &lt;dbl&gt; | H3K4me3 &lt;dbl&gt; | class &lt;chr&gt; |\n",
+       "|---|---|---|---|---|---|---|---|---|\n",
+       "| 1 | chr1 |     1 |  2000 | 0 | 0.00000 | 0 | 0 | Non-Enhancer |\n",
+       "| 12459 | chr1 |  2001 |  4000 | 0 | 0.00000 | 0 | 0 | Non-Enhancer |\n",
+       "| 23570 | chr1 |  4001 |  6000 | 0 | 0.00000 | 0 | 0 | Non-Enhancer |\n",
+       "| 34681 | chr1 |  6001 |  8000 | 0 | 0.00000 | 0 | 0 | Non-Enhancer |\n",
+       "| 45792 | chr1 |  8001 | 10000 | 0 | 0.11165 | 0 | 0 | <!----> |\n",
+       "| 10 | chr1 | 10001 | 12000 | 0 | 0.11165 | 0 | 0 | Non-Enhancer |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "      chrom start end   H3K27ac H3K4me1 H3K4me2 H3K4me3 class       \n",
+       "1     chr1      1  2000 0       0.00000 0       0       Non-Enhancer\n",
+       "12459 chr1   2001  4000 0       0.00000 0       0       Non-Enhancer\n",
+       "23570 chr1   4001  6000 0       0.00000 0       0       Non-Enhancer\n",
+       "34681 chr1   6001  8000 0       0.00000 0       0       Non-Enhancer\n",
+       "45792 chr1   8001 10000 0       0.11165 0       0                   \n",
+       "10    chr1  10001 12000 0       0.11165 0       0       Non-Enhancer"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "predictionData<- merge(countMatrix, negativesPositives, by = c(\"chrom\",\"start\", \"end\"))\n",
+    "\n",
+    "## sorting the data.\n",
+    "predictionData <- predictionData[with(predictionData, order(chrom, start, end)), ]\n",
+    "\n",
+    "head(predictionData)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "                 Enhancer Non-Enhancer \n",
+       "       28814       394953       740273 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "table(predictionData$class)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "The dataset we finally implement for the machine learning model is the following."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "    Enhancer Non-Enhancer \n",
+       "      394953       740273 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "predictionData <- predictionData[!(is.na(predictionData$class) | predictionData$class==\"\"), ]\n",
+    "table(predictionData$class)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are good to go. This is our enhancer-prediction dataset. Let us save it now for application to various machine learning algorithms."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "saveRDS(predictionData, \"predictionData.rds\")"
    ]
   },
   {
