--- a/Machine_Learning_Deep_Learning/hands_on_deep_learning_ep.ipynb
+++ b/Machine_Learning_Deep_Learning/hands_on_deep_learning_ep.ipynb
@@ -126,28 +126,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Installing package into ‘/Users/mei/Library/R/3.6/library’\n",
-      "(as ‘lib’ is unspecified)\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/hm/c3_fjypn62v5xh5b5ygv267m0000gn/T//Rtmpp3tYOi/downloaded_packages\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "## Install the package and load the library\n",
     "\n",
@@ -180,25 +161,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'data.frame':\t10000 obs. of  5 variables:\n",
-      " $ reads_h3k27ac: num  0.147 0.367 0.11 0.661 0.184 ...\n",
-      " $ reads_h3k4me3: num  0.0405 0 0 0.2025 0.162 ...\n",
-      " $ reads_h3k4me2: num  0.13 0.0867 0.13 0.6934 0.0867 ...\n",
-      " $ reads_h3k4me1: num  0.1137 0.398 0.0569 0.5686 0.0569 ...\n",
-      " $ class        : num  1 0 0 0 0 0 0 0 0 0 ...\n"
+      "'data.frame':\t11352 obs. of  5 variables:\n",
+      " $ reads_h3k27ac: num  0.651 0.145 0.145 0 0 ...\n",
+      " $ reads_h3k4me1: num  0 0.447 0.112 0 0 ...\n",
+      " $ reads_h3k4me2: num  0.0851 0 0.0851 0 0 ...\n",
+      " $ reads_h3k4me3: num  0.2385 0.0795 0.159 0 0 ...\n",
+      " $ class        : num  1 0 0 1 1 1 1 1 0 0 ...\n"
      ]
     }
    ],
    "source": [
     "## Let us consider our example dataset\n",
-    "d <- readRDS(\"./data/ep_data_sample.rds\")\n",
+    "d <- readRDS(\"predictionData.rds\")\n",
+    "\n",
+    "## Sample data for compliance with the computing infra-structure.\n",
+    "d <- d[sample(nrow(d), replace=F, size=0.01*nrow(d)),]\n",
+    "\n",
+    "## Subsetting just features and class columns.\n",
+    "d <- d[,4:8]\n",
+    "colnames(d)[1:4] <- c(\"reads_h3k27ac\", \"reads_h3k4me1\", \"reads_h3k4me2\", \"reads_h3k4me3\")\n",
+    "\n",
     "\n",
     "# Classes as factor levels. \n",
     "d$class <- as.numeric(as.factor(d$class))-1\n",
@@ -222,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,10 +223,10 @@
     "\n",
     "\n",
     "# Z-Score normalization\n",
-    "#d$peaks_h3k27ac <- as.numeric((d$peaks_h3k27ac - mean(d$peaks_h3k27ac)) / sd(d$peaks_h3k27ac))\n",
-    "#d$peaks_h3k4me1 <- as.numeric((d$peaks_h3k4me1 - mean(d$peaks_h3k4me1)) / sd(d$peaks_h3k4me1))\n",
-    "#d$peaks_h3k4me2 <- as.numeric((d$peaks_h3k4me2 - mean(d$peaks_h3k4me2)) / sd(d$peaks_h3k4me2))\n",
-    "#d$peaks_h3k4me3 <- as.numeric((d$peaks_h3k4me3 - mean(d$peaks_h3k4me3)) / sd(d$peaks_h3k4me3))"
+    "#d$reads_h3k27ac <- as.numeric((d$reads_h3k27ac - mean(d$reads_h3k27ac)) / sd(d$reads_h3k27ac))\n",
+    "#d$reads_h3k4me1 <- as.numeric((d$reads_h3k4me1 - mean(d$reads_h3k4me1)) / sd(d$reads_h3k4me1))\n",
+    "#d$reads_h3k4me2 <- as.numeric((d$reads_h3k4me2 - mean(d$reads_h3k4me2)) / sd(d$reads_h3k4me2))\n",
+    "#d$reads_h3k4me3 <- as.numeric((d$reads_h3k4me3 - mean(d$reads_h3k4me3)) / sd(d$reads_h3k4me3))"
    ]
   },
   {
@@ -249,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -270,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,46 +342,46 @@
        "<table>\n",
        "<caption>A matrix: 6 × 1 of type dbl</caption>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>5368652</th><td>0.1088052</td></tr>\n",
-       "\t<tr><th scope=row>6491345</th><td>0.1101396</td></tr>\n",
-       "\t<tr><th scope=row>1296509</th><td>0.1035213</td></tr>\n",
-       "\t<tr><th scope=row>546308</th><td>0.1157560</td></tr>\n",
-       "\t<tr><th scope=row>7304361</th><td>0.1087531</td></tr>\n",
-       "\t<tr><th scope=row>2472066</th><td>0.1329371</td></tr>\n",
+       "\t<tr><th scope=row>211034</th><td>0.5883089</td></tr>\n",
+       "\t<tr><th scope=row>903289</th><td>0.7055630</td></tr>\n",
+       "\t<tr><th scope=row>378912</th><td>0.8769491</td></tr>\n",
+       "\t<tr><th scope=row>522564</th><td>0.8769491</td></tr>\n",
+       "\t<tr><th scope=row>688240</th><td>0.8191244</td></tr>\n",
+       "\t<tr><th scope=row>222130</th><td>0.7837127</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "A matrix: 6 × 1 of type dbl\n",
        "\\begin{tabular}{r|l}\n",
-       "\t5368652 & 0.1088052\\\\\n",
-       "\t6491345 & 0.1101396\\\\\n",
-       "\t1296509 & 0.1035213\\\\\n",
-       "\t546308 & 0.1157560\\\\\n",
-       "\t7304361 & 0.1087531\\\\\n",
-       "\t2472066 & 0.1329371\\\\\n",
+       "\t211034 & 0.5883089\\\\\n",
+       "\t903289 & 0.7055630\\\\\n",
+       "\t378912 & 0.8769491\\\\\n",
+       "\t522564 & 0.8769491\\\\\n",
+       "\t688240 & 0.8191244\\\\\n",
+       "\t222130 & 0.7837127\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "A matrix: 6 × 1 of type dbl\n",
        "\n",
-       "| 5368652 | 0.1088052 |\n",
-       "| 6491345 | 0.1101396 |\n",
-       "| 1296509 | 0.1035213 |\n",
-       "| 546308 | 0.1157560 |\n",
-       "| 7304361 | 0.1087531 |\n",
-       "| 2472066 | 0.1329371 |\n",
+       "| 211034 | 0.5883089 |\n",
+       "| 903289 | 0.7055630 |\n",
+       "| 378912 | 0.8769491 |\n",
+       "| 522564 | 0.8769491 |\n",
+       "| 688240 | 0.8191244 |\n",
+       "| 222130 | 0.7837127 |\n",
        "\n"
       ],
       "text/plain": [
-       "        [,1]     \n",
-       "5368652 0.1088052\n",
-       "6491345 0.1101396\n",
-       "1296509 0.1035213\n",
-       "546308  0.1157560\n",
-       "7304361 0.1087531\n",
-       "2472066 0.1329371"
+       "       [,1]     \n",
+       "211034 0.5883089\n",
+       "903289 0.7055630\n",
+       "378912 0.8769491\n",
+       "522564 0.8769491\n",
+       "688240 0.8191244\n",
+       "222130 0.7837127"
       ]
      },
      "metadata": {},
@@ -404,35 +393,35 @@
        "<table>\n",
        "<caption>A data.frame: 1 × 5</caption>\n",
        "<thead>\n",
-       "\t<tr><th></th><th scope=col>reads_h3k27ac</th><th scope=col>reads_h3k4me3</th><th scope=col>reads_h3k4me2</th><th scope=col>reads_h3k4me1</th><th scope=col>class</th></tr>\n",
+       "\t<tr><th></th><th scope=col>reads_h3k27ac</th><th scope=col>reads_h3k4me1</th><th scope=col>reads_h3k4me2</th><th scope=col>reads_h3k4me3</th><th scope=col>class</th></tr>\n",
        "\t<tr><th></th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th><th scope=col>&lt;dbl&gt;</th></tr>\n",
        "</thead>\n",
        "<tbody>\n",
-       "\t<tr><th scope=row>5368652</th><td>0.007662829</td><td>0.0007861644</td><td>0.007915584</td><td>0.01142856</td><td>1</td></tr>\n",
+       "\t<tr><th scope=row>211034</th><td>0.01821862</td><td>0</td><td>0.003021148</td><td>0.002133713</td><td>1</td></tr>\n",
        "</tbody>\n",
        "</table>\n"
       ],
       "text/latex": [
        "A data.frame: 1 × 5\n",
        "\\begin{tabular}{r|lllll}\n",
-       "  & reads\\_h3k27ac & reads\\_h3k4me3 & reads\\_h3k4me2 & reads\\_h3k4me1 & class\\\\\n",
+       "  & reads\\_h3k27ac & reads\\_h3k4me1 & reads\\_h3k4me2 & reads\\_h3k4me3 & class\\\\\n",
        "  & <dbl> & <dbl> & <dbl> & <dbl> & <dbl>\\\\\n",
        "\\hline\n",
-       "\t5368652 & 0.007662829 & 0.0007861644 & 0.007915584 & 0.01142856 & 1\\\\\n",
+       "\t211034 & 0.01821862 & 0 & 0.003021148 & 0.002133713 & 1\\\\\n",
        "\\end{tabular}\n"
       ],
       "text/markdown": [
        "\n",
        "A data.frame: 1 × 5\n",
        "\n",
-       "| <!--/--> | reads_h3k27ac &lt;dbl&gt; | reads_h3k4me3 &lt;dbl&gt; | reads_h3k4me2 &lt;dbl&gt; | reads_h3k4me1 &lt;dbl&gt; | class &lt;dbl&gt; |\n",
+       "| <!--/--> | reads_h3k27ac &lt;dbl&gt; | reads_h3k4me1 &lt;dbl&gt; | reads_h3k4me2 &lt;dbl&gt; | reads_h3k4me3 &lt;dbl&gt; | class &lt;dbl&gt; |\n",
        "|---|---|---|---|---|---|\n",
-       "| 5368652 | 0.007662829 | 0.0007861644 | 0.007915584 | 0.01142856 | 1 |\n",
+       "| 211034 | 0.01821862 | 0 | 0.003021148 | 0.002133713 | 1 |\n",
        "\n"
       ],
       "text/plain": [
-       "        reads_h3k27ac reads_h3k4me3 reads_h3k4me2 reads_h3k4me1 class\n",
-       "5368652 0.007662829   0.0007861644  0.007915584   0.01142856    1    "
+       "       reads_h3k27ac reads_h3k4me1 reads_h3k4me2 reads_h3k4me3 class\n",
+       "211034 0.01821862    0             0.003021148   0.002133713   1    "
       ]
      },
      "metadata": {},
@@ -470,8 +459,8 @@
       "text/plain": [
        "     \n",
        "pred1    0    1\n",
-       "    0 6140  865\n",
-       "    1    3   12"
+       "    0   85   59\n",
+       "    1 2611 5215"
       ]
      },
      "metadata": {},
@@ -481,7 +470,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The misclassification error is 0.1236467"
+      "The misclassification error is 0.3350063"
      ]
     }
    ],
@@ -501,7 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are calculating the misclassification error on training data. Intuitively, it should be low because that is the data out of which neural network model was built over. Nonetheless, it is about 12 percent which can still be improved upon. The table shows that 6140 enhancers and 12 non-enhancers were classified correctly (the diagonal elements), and the off diagonal elements constitute the errors in classification. 865 enhancers were classified as non-enhancers and 3 non-enhancers were classified as enhancers."
+    "We are calculating the misclassification error on training data. Intuitively, it should be low because that is the data out of which neural network model was built over. Nonetheless, it is about 33 percent which can still be improved upon. The table shows that 85 enhancers and 5215 non-enhancers were classified correctly (the diagonal elements), and the off diagonal elements constitute the errors in classification. 2611 enhancers were classified as non-enhancers and 59 non-enhancers were classified as enhancers."
    ]
   },
   {
@@ -521,8 +510,8 @@
       "text/plain": [
        "     \n",
        "pred2    0    1\n",
-       "    0 2635  342\n",
-       "    1    0    3"
+       "    0    1    0\n",
+       "    1 1181 2200"
       ]
      },
      "metadata": {},
@@ -532,7 +521,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The misclassification error is 0.1147651"
+      "The misclassification error is 0.3492017"
      ]
     }
    ],
@@ -558,7 +547,16 @@
    "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning message:\n",
+      "“Algorithm did not converge in 1 of 1 repetition(s) within the stepmax.”\n"
+     ]
+    }
+   ],
    "source": [
     "nn1 <- neuralnet(class~reads_h3k27ac+reads_h3k4me3+reads_h3k4me2+reads_h3k4me1,\n",
     "               data = training,\n",
@@ -854,15 +852,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "  There is a binary version available but the source version is later:\n",
+      "      binary  source needs_compilation\n",
+      "keras  2.1.2 2.2.5.0             FALSE\n",
+      "\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Installing package into ‘/Users/mei/Library/R/3.6/library’\n",
-      "(as ‘lib’ is unspecified)\n",
+      "installing the source package ‘keras’\n",
+      "\n",
       "\n"
      ]
     },
@@ -870,12 +879,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "The downloaded binary packages are in\n",
-      "\t/var/folders/hm/c3_fjypn62v5xh5b5ygv267m0000gn/T//RtmpOgf6jy/downloaded_packages\n",
-      "\n",
-      "Installation complete.\n",
-      "\n"
+      "Creating virtual environment '~/.virtualenvs/r-reticulate' ...\n",
+      "Using python: /Users/soumyajauhari/opt/anaconda3/bin/python3.7\n",
+      "Using virtual environment '~/.virtualenvs/r-reticulate' ...\n"
+     ]
+    },
+    {
+     "ename": "ERROR",
+     "evalue": "Error: Error installing package(s): 'tensorflow==2.0.0', 'keras', 'tensorflow-hub', 'h5py', 'pyyaml', 'requests', 'Pillow', 'scipy'\n",
+     "output_type": "error",
+     "traceback": [
+      "Error: Error installing package(s): 'tensorflow==2.0.0', 'keras', 'tensorflow-hub', 'h5py', 'pyyaml', 'requests', 'Pillow', 'scipy'\nTraceback:\n",
+      "1. install_keras()",
+      "2. install_tensorflow(method = method, conda = conda, version = tensorflow, \n .     extra_packages = extra_packages, pip_ignore_installed = FALSE, \n .     ...)",
+      "3. reticulate::py_install(packages = c(package, extra_packages), \n .     envname = envname, method = method, conda = conda, python_version = conda_python_version, \n .     pip = TRUE, ...)",
+      "4. virtualenv_install(envname = envname, packages = packages, ...)",
+      "5. pip_install(python, packages, ignore_installed = ignore_installed)",
+      "6. stop(msg, call. = FALSE)"
      ]
     }
    ],
@@ -1824,7 +1844,7 @@
    "mimetype": "text/x-r-source",
    "name": "R",
    "pygments_lexer": "r",
-   "version": "3.6.0"
+   "version": "3.3.3"
   }
  },
  "nbformat": 4,
